[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elematic"
version = "1.0.2"
description = "Material information management via MatML for Python"
readme = "readme.md"
license = {file = "LICENSE"}
authors = [
    {name = "Noah Gula"}
]
keywords = ["materials", "information", "management", "MatML"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
    "six",
    "openpyxl",
]

[project.urls]
"Homepage" = "https://github.com/nogula/elematic"
"Repository" = "https://github.com/nogula/elematic"
"Documentation" = "https://github.com/nogula/elematic/wiki"
"Issues" = "https://github.com/nogula/elematic/issues"

[project.optional-dependencies]
# Currently, you have none, but you can add them here later.

[tool.hatch.metadata]
# Additional Hatch-specific configurations if needed
