[project]
name = "elematic"
version = "1.0.4"
dynamic = ["classifiers"]
description = "Material information management via MatML for Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "Noah Gula" }
]
keywords = ["materials", "information", "management", "MatML"]
dependencies = [
    "lxml",
    "openpyxl",
]

[project.urls]
"Homepage" = "https://github.com/nogula/elematic"
"Repository" = "https://github.com/nogula/elematic"
"Documentation" = "https://github.com/nogula/elematic/wiki"
"Issues" = "https://github.com/nogula/elematic/issues"

[tool.poetry]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.4"
autopep8 = "^2.3.2"
